Deployment/openshift/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pizza-api
  namespace: mohanramphp-dev
  labels:
    app: pizza-api
    version: v1
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: pizza-api
    deploymentconfig: pizza-api
  sessionAffinity: None
